# repo-plugins

./: .empty  .gitattributes  .gitignore  .gitmodules  .mention-bot  .tests-config.json  .travis.yml  Credits.txt  ISSUE_TEMPLATE.md  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md  Readme.md  THE OMS  addon.py  addon.xml  changelog.txt  default.py  info.txt  main.py  onlynew_hungarian_strings_dharma_plugins.patch  test.py  travis-buddy-failure-template.md  travis-buddy-success-template.md
context.downloadit/: LICENSE  addon.py  addon.xml  changelog.txt  patch  settings.py
plugin.audio.100fm/: addon.py  addon.xml  cache.py  changelog.txt  config.py
plugin.audio.ListenLiveEU/: addon.xml  changelog.txt  default.py
plugin.audio.abcradionational/: Changelog.txt  README.md  addon.py  addon.xml
plugin.audio.abradio.cz/: README  addon.xml  changelog.txt  default.py  install.sh
plugin.audio.ampache/: LICENSE  README  addon.xml  default.py  service.py
plugin.audio.arteconcert/: addon.xml  (+1 more)
plugin.audio.somafm/: README.md  addon.xml  changelog.txt  default.py  pyproject.toml
plugin.audio.somafm/lib/: channel.py
plugin.audio.somafm/resources/: settings.xml
plugin.audio.somafm/resources/language/English/: strings.po
plugin.audio.somafm/resources/language/German/: strings.po
plugin.audio.somafm/resources/language/resource.language.de_de/: strings.po
plugin.audio.somafm/resources/language/resource.language.en_gb/: strings.po
plugin.audio.somafm/resources/language/resource.language.nl_nl/: strings.po
plugin.audio.somafm/resources/lib/: addon.py  channel.py
(+15159 files in other folders)
