[tool.poetry]
name = "plugin.audio.somafm"
version = "2.0.0"
description = "SomaFM Plugin for Kodi"
authors = [
    "Evin Revello <Evin@EvinRevello.com>"
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
